--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,35 @@
 
-html, body{
+html, 
+body{
     height: 100%;
 }
 /*Navbar*/
 .bg-alpha{
     background: rgba(0, 0, 0, 0.5);
+}
+
+/*Carousel*/
+.carousel,
+.carousel-inner,
+.carousel-item,
+.carousel-inner .active{
+    height: 100%;
+}
+
+.carousel-img{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+.carousel-caption{
+    color: white;
+    
+}
+
+.backscreen{
+    background: rgba(0, 0, 0, 0.5);
+    height: 100%;
 }
 
 
