--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 html, 
 body{
     height: 100%;
+    margin: 0;
+
 }
 /*Navbar*/
 .bg-alpha{
@@ -26,7 +28,6 @@ body{
     color: white;
     
 }
-
 .backscreen{
     background: rgba(0, 0, 0, 0.5);
     height: 100%;
