--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,4 +95,130 @@ body{
     position: relative;
     padding: 20px;
     width: 650px;
+    
+}
+
+/* Page title */
+
+.page-litle {
+    position: relative;
+    display: block;
+    padding-top: 250px;
+    padding-bottom: 100px;
+    
+    
+}
+
+/* Icon tree */
+.icon-tree{
+    position: relative;
+    position: absolute;
+    left: -50px;
+    bottom: 12px;
+}
+
+/* Section Timeline */
+
+.timeline{
+    list-style: none;
+    position: relative;
+    padding: 20px 0 20px;
+}
+.timeline > li{
+    position: relative;
+    margin-bottom: 20px;
+}
+.timeline::before{
+    position: absolute;
+    content: " ";
+    width: 2px;
+    background: greenyellow;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -1px;
+}
+li > .timelline-nature{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border: 3px solid pink;
+    left: 50%;
+    margin-left: -9px;
+    border-radius: 50%;
+    background: honeydew;
+    top: 15px;
+    box-shadow: 0 0 0 5px white;
+}
+li > .timelline-nature::before{
+    content: "";
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    width: 25px;
+    height: 2px;
+    background: #e6e6e6;
+}
+li.inverted > .timelline-nature::before{
+    right: -32px;
+}
+li >.timelline-nature p{
+    width: 200px;
+    margin-top: -9px;
+    margin-left: 25px;
+    font-size: 17px;
+    font-weight: bold;
+}
+li.inverted > .timelline-nature p{
+    float: right;
+    text-align: right;
+    margin-right: 25px;
+}
+
+li > .timeline-card{
+    position: relative;
+    width: 46%;
+    float: left;
+    text-align: right;
+    padding: 0 10px;
+}
+li.inverted > .timeline-card{
+    float: right;
+    text-align: left;
+}
+.timeline > li::after{
+    content: "";
+    clear: both;
+    display: block;
+}
+.timeline-arrow{
+    width: 100%;
+    text-align: center;
+    bottom: -50px;
+}
+
+@media(max-width:768px){
+    .timeline::before,
+    .timelline-nature{
+        left: 40px !important;
+    }
+    .timelline-nature::before{
+        right: -32px !important;
+    }
+    .timelline-nature p,
+    li.inverted> .timelline-nature p{
+        margin-left: 50px !important;
+        text-align: left;
+        float: left;
+    }
+    li>.timeline-card{
+        width: 100%;
+        text-align: left;
+        padding: 35px 0 0 50px;
+    }
+    .timeline-arrow{
+        text-align: left;
+        left: 33px;
+    }
+
 }
