--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body{
     height: 100%;
 }
 
-/* Sectiom blog */
+/* Section blog */
 .warpper-card-img{
     position: relative;
     padding-top: 56.25%;
@@ -74,9 +74,7 @@ body{
 .warpper-card-img img{
     position: absolute;
     top: 0%;
-    
-    
-    
+     
 }
 .warpper-card-img img:hover{
     transform: scale(1.2);
@@ -85,6 +83,25 @@ body{
 .btn-group-custom button{
     margin-bottom: 0.5rem;
     width: 100px;
+}
+.blog-image{
+    padding: 200px 0px 120px;
+    text-align: center;
+    
+}
+.blog-content{
+    padding: 50px 100px;
+    box-shadow: 0px 0px 10px #a5a5a5;
+}
+@media (max-width :991px){
+    .blog-content{
+        padding: 40px 50px;
+    }
+}
+@media (max-width :768px){
+    .blog-content{
+        padding: 20px 40px;
+    }
 }
 
 /* Section footer */
